# fogg

./: .gitignore  COPYING  INSTALL  README
cmake/: CMakeLists.txt  FoggBuildConfig.h.in
res/: fogg.qrc
src/: AboutDialog.cpp  AboutDialog.h  ButtonActionBinder.cpp  ButtonActionBinder.h  Config.cpp  Config.h  Converter.cpp  Converter.h  DonationDialog.cpp  DonationDialog.h  EncodingQualityWidget.cpp  EncodingQualityWidget.h  FileFetcher.cpp  FileFetcher.h  FileFetcherDialog.cpp  FileFetcherDialog.h  Global.cpp  Global.h  JobItemModel.cpp  JobItemModel.h  MainWindow.cpp  MainWindow.h  NonRecognizedFilesDialog.cpp  NonRecognizedFilesDialog.h  PoweredByWidget.cpp  PoweredByWidget.h  PrecompiledHeaders.h  PreferencesDialog.cpp  PreferencesDialog.h  ProfileNameDialog.cpp  ProfileNameDialog.h  SkippedFilesDialog.cpp  SkippedFilesDialog.h  TargetNameDialog.cpp  TargetNameDialog.h  main.cpp
src/promoted/: EncodingQualityWidget.h
translations/en/: fogg.ts  info.ts
translations/ru/: fogg.ts  info.ts
ui/: AboutDialog.ui  DonationDialog.ui  EncodingQualityWidget.ui  FileFetcherDialog.ui  MainWindow.ui  NonRecognizedFilesDialog.ui  PoweredByWidget.ui  PreferencesDialog.ui  ProfileNameDialog.ui  SkippedFilesDialog.ui  TargetNameDialog.ui
